[tool.poetry]
name = "fastapi-linebot-nodb"
version = "0.1.0"
description = ""
authors = ["Even Pan <yz830620@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_linebot_nodb"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.92.0"
line-bot-sdk = "^2.4.1"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
